--- a/master.css
+++ b/master.css
@@ -3,20 +3,20 @@
 /* Text inside these asterisks and slashes are comments for human */
 
   a {
-    /* set the text color to blue here */
+    color: blue;/* set the text color to blue here */
     text-decoration: none; /* This means we do not want hyperlinks to be underlined */
   }
 
   a:hover {
-    /* set the text color to red here */
+    color: red;/* set the text color to red here */
     text-decoration: none; /* This means we do not want hyperlinks to be underlined */
   }
 
   body {
-    /* set the background color here */
-    /* set the text color to black here */
-    /* set the font here */
-    /* set the text alignment here */
+    background-color: beige; /* set the background color here */
+    color: black;/* set the text color to black here */
+    font-family: Arial, Helvetica, sans-serif; /* set the font here */
+    text-align: center; /* set the text alignment here */
    }
 
   footer {
@@ -30,8 +30,10 @@
    }
 
   h2 {
-    /* set the text color of to #075AAB here */
+    color: #075AAB; /* set the text color of to #075AAB here */
     /* set both the bottom margin and top margin to 2.5rem here */
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
    }
 
   h3 {
